--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
 
 
+FRONTEND_URL="https://explore-kerala-frontend.onrender.com"
 
 PORT=5000
 MONGDB_ULR="mongodb+srv://vasishttv8:aoUhjgCXOfE13K8l@cluster0.9vdfh.mongodb.net/blog-9"
